--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3"
   },
   "devDependencies": {
